# app/Http/Controllers/Verification/VerifySmsCodeController.php
@@ -5,51 +5,45 @@ namespace App\Http\Controllers\Verification;
 use App\Http\Controllers\Controller;
 use App\Models\VerificationCode;
 use App\Models\User;
-use Illuminate\Http\Request;
+use App\Http\Requests\VerifyCodeRequest;
 use Illuminate\Support\Facades\Auth;
-use Illuminate\Support\Facades\Validator;
 
 class VerifySmsCodeController extends Controller
 {
-    public function verifySmsCode(Request $request)
+    public function verify(VerifyCodeRequest $request)
     {
-        $validator = Validator::make($request->all(), [
-            'phone' => 'required|digits:10',
-            'code' => 'required|digits:6',
-        ]);
-    
-        if ($validator->fails()) {
-            return response()->json(['errors' => $validator->errors()], 422);
-        }
+        $data = $request->validated();
 
         $user = User::where('phone', $request->phone)->first();
-    
-        if (!$user) {
-            return response()->json(['error' => 'User not found'], 404);
+
+        if ($user->verification) {
+            return response()->json(['error' => 'Пользователь уже верифицирован.'], 422);
         }
 
-        $verificationCode = VerificationCode::where('user_id', $user->id)
-            ->where('code', $request->code)
-            ->where('finished', false)  
-            ->first();
+        $verificationCode = VerificationCode::where([
+            ['user_id', '=', $user->id],
+            ['code', '=', $request->code],
+            ['finished', '=', false],
+        ])->first();
 
-        if (!$verificationCode) {
-            return response()->json(['error' => 'Invalid code'], 422);
+        if (!$verificationCode || $verificationCode->code != $request->code) {
+            $user->verificationCodes()->increment('attempts');
+            return response()->json(['error' => 'Неверный код.'], 422);
         }
 
-        $createdAt = $verificationCode->created_at;
-        $expirationTime = now()->subMinutes(5);
-    
-        if ($createdAt->diffInMinutes($expirationTime) <= 0) {
-            return response()->json(['error' => 'Code has expired'], 422);
+        if ($verificationCode->created_at->addMinutes(5)->isPast()) {
+            return response()->json(['error' => 'Срок действия кода истек'], 423);
         }
-    
+
+        if ($verificationCode->attempts >= 6) {
+            return response()->json(['error' => 'Превышено количество попыток.'], 424);
+        }
+
         $verificationCode->update(['finished' => true]);
+        $verificationCode->delete();
     
         $token = $user->createToken('verification-token')->accessToken;
     
         return response()->json(['token' => $token]);
     }
-    
-    
 }
