# routes/api.php
@@ -18,6 +18,6 @@ use App\Http\Controllers\Verification\VerifySmsCodeController;
 */
 
 Route::prefix('v1')->group(function () {
-    Route::post('send-sms-code', [SmsCodeController::class, 'sendSmsCode']);
-    Route::post('verify-sms-code', [VerifySmsCodeController::class, 'verifySmsCode']);
+    Route::post('send-sms-code', [SmsCodeController::class, 'send']);
+    Route::post('verify-sms-code', [VerifySmsCodeController::class, 'verify']);
 });
